--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <title>NodeTerm</title>
+    <script>
+      // Global polyfill - DEBE ejecutarse ANTES que cualquier otro script
+      (function() {
+        if (typeof global === 'undefined') {
+          if (typeof globalThis !== 'undefined') {
+            window.global = globalThis;
+          } else if (typeof window !== 'undefined') {
+            window.global = window;
+          } else if (typeof self !== 'undefined') {
+            self.global = self;
+          } else {
+            this.global = this;
+          }
+        }
+        
+        // También asegurar que global esté disponible globalmente
+        if (typeof window !== 'undefined' && !window.global) {
+          window.global = window;
+        }
+        
+        console.log('Global polyfill loaded:', typeof global !== 'undefined');
+      })();
+    </script>
   </head>
   <body>
     <div id="root"></div>
