--- a/splash.html
+++ b/splash.html
@@ -1,42 +1,185 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <style>
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-    html, body {
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    html,
+    body {
       height: 100%;
-      background: linear-gradient(180deg, #1b2330 0%, #0e1116 50%);
+      background: linear-gradient(180deg, #1a2332 0%, #0f1722 50%, #0a0f18 100%);
       color: #e3f2fd;
       font-family: system-ui, -apple-system, Segoe UI, sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      gap: 24px;
+      overflow: hidden;
+      position: relative;
     }
-    .h { display: flex; align-items: center; gap: 12px; }
-    .s {
-      width: 18px; height: 18px; border-radius: 50%;
-      border: 2px solid rgba(255,255,255,.25);
-      border-top-color: #79b8ff;
-      animation: r 720ms linear infinite;
+
+    body::before {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 500px;
+      height: 500px;
+      background: radial-gradient(circle, rgba(59, 130, 246, 0.08) 0%, transparent 70%);
+      pointer-events: none;
     }
-    @keyframes r { to { transform: rotate(360deg); } }
-    .b { font-weight: 600; font-size: 20px; opacity: .95; }
-    ul { list-style: none; padding: 0; text-align: left; min-width: 240px; }
-    ul li { display: flex; align-items: center; gap: 10px; padding: 6px 0; font-size: 14px; opacity: .9; }
-    ul li .i { width: 18px; text-align: center; font-size: 16px; color: #79b8ff; }
-    ul li.done .i { color: #7ee787; }
+
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 32px;
+      z-index: 1;
+      padding: 40px 24px;
+      width: 100%;
+    }
+
+    .logo-section {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 16px;
+      text-align: center;
+    }
+
+    .logo-wrapper {
+      width: 140px;
+      height: 140px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .logo {
+      width: 140px;
+      height: 140px;
+      object-fit: contain;
+      border-radius: 24px;
+    }
+
+    .brand {
+      font-weight: 600;
+      font-size: 42px;
+      color: #ffffff;
+      letter-spacing: -0.5px;
+      margin-top: 8px;
+    }
+
+    .tagline {
+      font-size: 14px;
+      color: rgba(255, 255, 255, 0.5);
+      letter-spacing: 2px;
+      font-weight: 400;
+      text-transform: uppercase;
+      margin-top: 4px;
+    }
+
+    .progress-section {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 16px;
+      width: 100%;
+      max-width: 400px;
+      margin-top: 24px;
+    }
+
+    .progress-container {
+      width: 100%;
+      height: 6px;
+      background: rgba(30, 41, 59, 0.8);
+      border-radius: 3px;
+      overflow: hidden;
+      box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.4), 0 1px 0 rgba(255, 255, 255, 0.05);
+      border: 1px solid rgba(59, 130, 246, 0.2);
+    }
+
+    .progress-bar {
+      height: 100%;
+      background: linear-gradient(90deg, #3b82f6 0%, #60a5fa 50%, #3b82f6 100%);
+      border-radius: 3px;
+      width: 0%;
+      transition: width 0.6s cubic-bezier(0.4, 0, 0.2, 1);
+      box-shadow: 0 0 20px rgba(59, 130, 246, 0.6), 0 0 40px rgba(59, 130, 246, 0.3);
+    }
+
+    .progress-percent {
+      font-size: 14px;
+      color: rgba(255, 255, 255, 0.6);
+      font-weight: 500;
+      font-variant-numeric: tabular-nums;
+    }
+
+    .status {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      font-size: 14px;
+      color: rgba(255, 255, 255, 0.6);
+      font-weight: 400;
+      min-height: 20px;
+    }
+
+    .status-icon {
+      width: 14px;
+      height: 14px;
+      border: 2px solid rgba(59, 130, 246, 0.4);
+      border-top-color: #3b82f6;
+      border-radius: 50%;
+      animation: spin 0.7s linear infinite;
+    }
+
+    @keyframes spin {
+      to {
+        transform: rotate(360deg);
+      }
+    }
+
+    .version {
+      position: fixed;
+      bottom: 20px;
+      font-size: 11px;
+      color: rgba(255, 255, 255, 0.35);
+      letter-spacing: 0.5px;
+    }
   </style>
 </head>
+
 <body>
-  <div class="h"><div class="s"></div><span class="b">NodeTerm</span></div>
-  <ul>
-    <li id="step1"><span class="i">○</span><span class="l">Iniciando NodeTerm...</span></li>
-    <li id="step2"><span class="i">○</span><span class="l">Preparando ventana...</span></li>
-    <li id="step3"><span class="i">○</span><span class="l">Cargando interfaz...</span></li>
-    <li id="step4"><span class="i">○</span><span class="l">Iniciando sesión...</span></li>
-  </ul>
+  <div class="container">
+    <div class="logo-section">
+      <div class="logo-wrapper">
+        <img class="logo" src="src/assets/splash-icon.png" alt="NodeTerm">
+      </div>
+      <div>
+        <div class="brand">NodeTerm</div>
+        <div class="tagline">Secure. Reliable. Connected.</div>
+      </div>
+    </div>
+    <div class="progress-section">
+      <div class="progress-container">
+        <div class="progress-bar" id="progressBar"></div>
+      </div>
+      <div class="progress-percent" id="progressPercent">0%</div>
+      <div class="status" id="status">
+        <div class="status-icon"></div>
+        <span class="status-text" id="statusText">Iniciando...</span>
+      </div>
+    </div>
+  </div>
+  <div class="version" id="version">v1.6.3</div>
 </body>
+
 </html>
